# grandslam

./: README.md  gsa.py  pyproject.toml  requirements.txt
src/grandslam/: cli.py  gsa.py
src/gsa/: __init__.py  gsa.py
